basic-template/security_groups.tf
resource "aws_security_group" "elb-sg" {
	name = "elb-sg"
	vpc_id = "${aws_vpc.vpc.id}"
	ingress {
		from_port = 80
		protocol = "tcp"
		to_port = 80
		cidr_blocks = ["0.0.0.0/0"]
	}
	egress {
		from_port = 0
		protocol = "-1"
		to_port = 0
		cidr_blocks = ["0.0.0.0/0"]
	}
}

resource "aws_security_group" "web-sg" {
	name = "web-sg"
	vpc_id = "${aws_vpc.vpc.id}"
	ingress {
		from_port = 80
		protocol = "tcp"
		to_port = 80
		security_groups = ["${aws_security_group.elb-sg.id}"]
	}
	ingress {
		from_port = 22
		protocol = "tcp"
		to_port = 22
		cidr_blocks = ["0.0.0.0/0"]
	}
	egress {
		from_port = 0
		protocol = "-1"
		to_port = 0
		cidr_blocks = ["0.0.0.0/0"]
	}
}

resource "aws_security_group" "rds-sg" {
	name = "rds-sg"
	vpc_id = "${aws_vpc.vpc.id}"
	ingress {
		from_port = 3306
		protocol = "tcp"
		to_port = 3306
		security_groups = ["${aws_security_group.web-sg.id}"]
	}
	egress {
		from_port = 0
		protocol = "-1"
		to_port = 0
		cidr_blocks = ["0.0.0.0/0"]
	}
}
